<resources>
    <string name="app_name">RateMyCourse</string>
    <string name="main_page">Main Page</string>
    <string name="login">Login</string>
    <string name="view_all_courses">View All Courses</string>
    <string name="instructions">Instructions</string>
    <string name="about_us">About Us</string>
    <string name="menu">Menu</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="signup">Sign Up</string>
    <string name="ok">OK</string>
    <string name="login_success_message">Login is successful.</string>
    <string name="login_fail_message">Login failed. Please check your credential.</string>
    <string name="login_message_title">Login Status</string>
    <string name="signup_success_message">Sign Up is successful.</string>
    <string name="signup_fail_message">Sign Up failed. Please check your credential.</string>
    <string name="signup_message_title">Sign Up Status</string>
    <string name="autocomplete_hint">Enter course number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usefulness_score_header">Usefulness Score</string>
    <string name="homework_score_header">Homework Score</string>
    <string name="reading_score_header">Reading Score</string>
    <string name="stress_score_header">Stress Score</string>
    <string name="average_score_header">Average Score</string>

    <string name="addCourse">Add Course</string>
    <string name="courseName">Course Name</string>
    <string name="courseNumber">Course Number</string>
    <string name="yearOffered">Year Offered</string>
    <string name="instructorName">Instructor Name</string>
    <string name="semesterOffered">Semester Offered</string>
    <string name="courseMode">Course Mode</string>
    <string name="courseMessageTitle">Message.</string>
    <string name="courseAddSuccess">Course Added successfully.</string>
    <string name="courseAddFail">Unable to add new Course.</string>

    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="id_label">ID</string>
    <string name="register_label">Register</string>
</resources>
