<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<group android:checkableBehavior="single">
		<item
			android:id="@+id/drawer_nav_mainPage"
			android:icon="@drawable/ic_star"
			android:title="@string/main_page" />
		<item
			android:id="@+id/drawer_nav_login"
			android:icon="@drawable/ic_star"
			android:title="@string/login" />
		<item
			android:id="@+id/drawer_nav_viewAllCourses"
			android:icon="@drawable/ic_star"
			android:title="@string/view_all_courses" />
		<item
			android:id="@+id/drawer_nav_instructions"
			android:icon="@drawable/ic_star"
			android:title="@string/instructions" />
		<item
			android:id="@+id/drawer_nav_aboutUs"
			android:icon="@drawable/ic_star"
			android:title="@string/about_us" />
	</group>
</menu>
