<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_marginTop="100dp"
	android:layout_marginBottom="100dp"
	android:orientation="vertical"
	tools:context=".LoginPageFragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:orientation="horizontal"
		android:layout_weight="10">

		<TextView
			android:id="@+id/label_email"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="40"
			android:layout_gravity="center"
			android:textSize="24sp"
			android:textStyle="bold"
			android:labelFor="@+id/text_email"
			android:text="@string/email" />

		<EditText
			android:id="@+id/text_email"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="60"
			android:layout_gravity="center"
			android:ems="10"
			android:autofillHints="@+id/text_email"
			android:inputType="textEmailAddress"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:orientation="horizontal"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_weight="10">

		<TextView
			android:id="@+id/label_password"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="40"
			android:layout_gravity="center"
			android:textSize="24sp"
			android:textStyle="bold"
			android:labelFor="@+id/text_password"
			android:text="@string/password" />

		<EditText
			android:id="@+id/text_password"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="60"
			android:layout_gravity="center"
			android:ems="10"
			android:autofillHints="@+id/text_password"
			android:inputType="textPassword"/>

	</LinearLayout>

	<Button
		android:id="@+id/button_login"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="2"
		android:gravity="center"
		android:textSize="24sp"
		android:textStyle="bold"
		android:layout_gravity="center"
		android:paddingVertical="10dp"
		android:paddingHorizontal="10dp"
		android:layout_marginTop="20dp"
		android:layout_marginBottom="20dp"
		android:layout_marginLeft="100dp"
		android:layout_marginRight="100dp"
		android:text="@string/login" />

	<Button
		android:id="@+id/button_signup"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="2"
		android:gravity="center"
		android:textSize="24sp"
		android:textStyle="bold"
		android:layout_gravity="center"
		android:paddingVertical="10dp"
		android:paddingHorizontal="10dp"
		android:layout_marginTop="20dp"
		android:layout_marginBottom="20dp"
		android:layout_marginLeft="100dp"
		android:layout_marginRight="100dp"
		android:text="@string/signup" />

</LinearLayout>